syntax = "proto3";

package room;

option go_package = "github.com/shota-aa/grpc-pr/pb";

import "proto/user.proto";
import "google/protobuf/timestamp.proto";

service RoomService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {}
};

message CreateRoomRequest {
  string name = 1;
  repeated user.User users = 2;
};

message CreateRoomResponse {
  string id = 1;
  string name = 2;
  repeated user.User users = 3;

  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
};